changed color scale to greens

--- a/test_manus/manual.bib
+++ b/test_manus/manual.bib
@@ -1,3 +1,15 @@
+@book{Aijala2014a,
+author = {{\"{A}}ij{\"{a}}l{\"{a}}, O., and Koistinen, A., and Sved, J., and Vanhatalo, K., and V{\"{a}}is{\"{a}}nen, P.,},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/{\"{A}}ij{\"{a}}l{\"{a}} et al. - 2014 - Mets{\"{a}}nhoidon suositukset Good forest management recommendations.pdf:pdf},
+isbn = {9789526612324},
+publisher = {Forestry Development Center Tapio},
+title = {{Mets{\"{a}}nhoidon suositukset [Good forest management recommendations]}},
+url = {https://tapio.fi/wp-content/uploads/2015/06/Metsanhoidon{\_}suositukset{\_}ver3{\_}netti{\_}1709141.pdf},
+year = {2014}
+}
+
+
+
 @article{Suvanto2019,
 author = {Suvanto, Susanne and Peltoniemi, Mikko and Tuominen, Sakari and Strandstr{\"{o}}m, Mikael and Lehtonen, Aleksi},
 doi = {10.1016/j.foreco.2019.117619},
@@ -11,5 +23,33 @@ publisher = {Elsevier},
 title = {{High-resolution mapping of forest vulnerability to wind for disturbance-aware forestry}},
 url = {https://doi.org/10.1016/j.foreco.2019.117619},
 volume = {453},
+year = {2019}
+}
+
+@article{Eyvindson2020,
+author = {Eyvindson, Kyle and Duflot, R{\'{e}}mi and Trivi{\~{n}}o, Mar{\'{i}}a and Blattert, Clemens and Potterf, M{\'{a}}ria and M{\"{o}}nkk{\"{o}}nen, Mikko},
+doi = {10.1016/j.landusepol.2020.104918},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Eyvindson et al. - 2020 - High boreal forest multifunctionality requires continuous cover forestry as a dominant management.pdf:pdf},
+journal = {Land Use Policy},
+keywords = {Biodiversity,Climate change mitigation,Continuous cover forestry,Ecosystem services,Forest planning,Optimization},
+pages = {1--10},
+title = {{High boreal forest multifunctionality requires continuous cover forestry as a dominant management}},
+url = {https://doi.org/10.1016/j.landusepol.2020.104918},
+volume = {100},
+year = {2021}
+}
+
+@misc{RDevelopmentCoreTeam2019,
+abstract = {R Core Team (2015). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. ISBN 3-900051-07-0, URL http://www.R-project.org/.},
+address = {Vienna, Austria},
+archivePrefix = {arXiv},
+arxivId = {1605.02688},
+author = {{R Development Core Team}},
+eprint = {1605.02688},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Team - 2014 - R Core Team (2014). R A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna.pdf:pdf},
+isbn = {3-900051-07-0},
+publisher = {R Foundation for Statistical Computing},
+title = {{R: A language and environment for statistical computing}},
+url = {http://www.r-project.org/.},
 year = {2019}
 }
