--- a/test_manus/mendeley_mybibfile.bib
+++ b/test_manus/mendeley_mybibfile.bib
@@ -19890,6 +19890,20 @@ url = {https://doi.org/10.1016/j.foreco.2019.117619},
 volume = {453},
 year = {2019}
 }
+
+@article{Eyvindson2020,
+author = {Eyvindson, Kyle and Duflot, R{\'{e}}mi and Trivi{\~{n}}o, Mar{\'{i}}a and Blattert, Clemens and Potterf, M{\'{a}}ria and M{\"{o}}nkk{\"{o}}nen, Mikko},
+doi = {10.1016/j.landusepol.2020.104918},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Eyvindson et al. - 2020 - High boreal forest multifunctionality requires continuous cover forestry as a dominant management.pdf:pdf},
+journal = {Land Use Policy},
+keywords = {Biodiversity,Climate change mitigation,Continuous cover forestry,Ecosystem services,Forest planning,Optimization},
+pages = {1--10},
+title = {{High boreal forest multifunctionality requires continuous cover forestry as a dominant management}},
+url = {https://doi.org/10.1016/j.landusepol.2020.104918},
+volume = {100},
+year = {2021}
+}
+
 @article{Eyvindson2018a,
 abstract = {Forests play a crucial role in the transition towards a bioeconomy by providing biomass to substitute for fossil-based materials and energy. However, a policy-policy conflict exists between the desire to increase the utilization of bio based renewable resources and the desire to protect and conserve biodiversity. Increasing forest harvest levels to meet the needs of the bioeconomy may conflict with biodiversity protection and ecosystem services provided by forests. Through an optimization framework, we examined trade-offs between increasing the extraction of timber resources, and the impacts on biodiversity and non-wood ecosystem services, and investigated possibilities to reconcile trade-off with changes in forest management in 17 landscapes in boreal forests. A diverse range of alternative forest management regimes were used. The alternatives varied from set aside to continuous cover forestry and a range of management options to reflect potential applications of the current management recommendations. These included adjustments to the number of thinning, the timing of final felling and the method of regeneration. Increasing forest harvest level to the maximum economically sustainable harvest had a negative effect on the habitat suitability index, bilberry yield, deadwood diversity and carbon storage. It resulted in a loss in variation among landscapes in their conservation capacity and the ability to provide ecosystem services. Multi-objective optimization results showed that combining different forest management regimes alleviated the negative effects of increasing harvest levels to biodiversity and non-wood ecosystem services. The results indicate that careful landscape level forest management planning is crucial to minimize the ecological costs of increasing harvest levels.},
 author = {Eyvindson, Kyle and Repo, Anna and M{\"{o}}nkk{\"{o}}nen, Mikko},
